--- a/ch1.ipynb
+++ b/ch1.ipynb
@@ -505,12 +505,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33fc6428",
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Test"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
